# glochidia

./: .gitignore  Examples.md  Makefile  README.md  SOURCES.txt  alpine-build.sh  container-build.sh  debian-build.sh  deploy_binary.sh  generate-manifest.sh  gpm.raw  grow_glochidium.sh  manifest.example.json  manifest.schema.json  x86_64-linux-musl-gcc  zpkg.md
.github/workflows/: build-release.yml  release-zpkg.yml
.trunk/: trunk.yaml
glochidia-locale/: Cargo.toml
glochidia-locale/src/: locale_gen.rs  main.rs
gpm/: Cargo.toml  README.md  gpm
gpm/src/: cli.rs  config.rs  downloader.rs  main.rs  manifest.rs
gpm/src/commands/: install.rs  list.rs  list_remote.rs  mod.rs  remove.rs  setup_path.rs  update.rs  upgrade.rs
scripts/: README.md  build-c-tool.sh  build-rust-tool.sh  extract-binary-version.sh  fetch-version.sh  finalize-version.sh  generate-manifest.py  generate-release-body.py  tools-metadata.json  verify-binary.sh
set_locale/: Cargo.toml
set_locale/src/: main.rs
tooling/: setup_cross_env.sh
zpkg/: build-zpkg.sh  zpkg.md
zpkg/raw/usr/share/casaos/modules/: gpm.json
