[package]
name = "gpm"
version = "0.1.0"
edition = "2021"
authors = ["Glochidia Project"]
description = "Glochidia Package Manager - Install static binaries on ZimaOS"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
indicatif = "0.17"
anyhow = "1.0"

[[bin]]
name = "gpm"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
